# quinn

./: .gitmodules
099/: README.md
099/include/circuit/: circuit.h
099/src/circuit/: CMakeLists.txt  circuit.c
099/src/parallel/: main.c
099/src/serial/: main.c
104/: README.md
104/include/circuit/: circuit.h
104/src/parallel/: CMakeLists.txt  main.c
104/src/serial/: CMakeLists.txt
109/: CMakeLists.txt  README.md
109/src/circuit/: circuit.c
109/src/parallel/: main.c
109/src/serial/: main.c
1120406/: README.md
1120406_hello_world/: CMakeLists.txt
1120406_hello_world/src/parallel/: CMakeLists.txt  main.c
1120407/: README.md
1120407/src/parallel/: main.c
1120407/src/serial/: CMakeLists.txt  main.c
1120407_reduce_sum/: CMakeLists.txt
1120407_reduce_sum/src/parallel/: CMakeLists.txt
1120408/: CMakeLists.txt  README.md  comparison.sh
1120408/src/parallel1/: CMakeLists.txt  main.c
1120408/src/parallel2/: CMakeLists.txt
1120408/src/serial/: CMakeLists.txt
1120408_consecutive_primes/: CMakeLists.txt
1120408_consecutive_primes/include/primes/: primes.h
1120408_consecutive_primes/src/parallel1/: CMakeLists.txt
1120408_consecutive_primes/src/parallel2/: main.c
1120408_consecutive_primes/src/primes/: CMakeLists.txt
1120408_consecutive_primes/src/serial/: main.c
1120409/: README.md
1120409/src/parallel/: main.c
1120409_prime_gaps/: CMakeLists.txt
1120409_prime_gaps/src/primes/: primes.c
1120409_prime_gaps/src/serial/: main.c
1120410/: CMakeLists.txt
1120410/include/identifiers/: identifiers.h
1120410/src/identifiers/: CMakeLists.txt  identifiers.c
1120410/src/parallel/: main.c
1120410/src/serial/: CMakeLists.txt  main.c
1120410_constrained_combinations/: README.md
1120410_constrained_combinations/src/parallel/: CMakeLists.txt  main.c
1120411/: README.md
1120411/include/equation/: equation.h
1120411/src/equation/: CMakeLists.txt  equation.c
1120411/src/serial/: CMakeLists.txt  main.c
1120411_pi_rectangle_rule/: CMakeLists.txt
1120411_pi_rectangle_rule/src/equation/: equation.c
1120411_pi_rectangle_rule/src/parallel/: CMakeLists.txt  main.c
1130412/: CMakeLists.txt
1130412/include/equation/: equation.h
1130412/src/equation/: CMakeLists.txt
1130412/src/parallel/: main.c
1130412/src/serial/: CMakeLists.txt
1130412/src/test/: CMakeLists.txt  main.c
1130412_pi_simpsons_rule/: README.md
1130412_pi_simpsons_rule/src/equation/: equation.c
1130412_pi_simpsons_rule/src/parallel/: CMakeLists.txt
1130412_pi_simpsons_rule/src/serial/: main.c
1130412_pi_simpsons_rule/src/test/: CMakeLists.txt  test_equation.c
120/: CMakeLists.txt  README.md
120/include/blkdcmp/: blkdcmp.h
120/src/: CMakeLists.txt
120/src/blkdcmp/: CMakeLists.txt
120/src/include/blkdcmp/: CMakeLists.txt
120/src/include/blkdecomp/: blkdecomp.h
120/src/lib/blkdecomp/: CMakeLists.txt  blkdecomp.c
120/test/blkdcmp/: CMakeLists.txt  test_blkdcmp_get_blk_sz.c  test_blkdcmp_get_idx_blk_s.c
120_blkdcmp/src/blkdcmp/: CMakeLists.txt
124/: CMakeLists.txt  README.md
124/src/refactored/: CMakeLists.txt  main.c
124/src/reference/: CMakeLists.txt  main.c
124_sieve/src/refactored/: CMakeLists.txt
124_sieve/src/reference/: CMakeLists.txt  MyMPI.h
1350506/: CMakeLists.txt  README.md
1350506/src/blkdcmp-demo/: main.c
1350506/src/sieve/: CMakeLists.txt  main.c  sieving.c  sieving.h
1350506_sieve/: README.md
1350506_sieve/src/sieve/: sieving.c  sieving.h
1350507/: CMakeLists.txt  README.md
1350507/src/sieve/: CMakeLists.txt  main.c  sieving.c  sieving.h
1350507_sieve/: README.md
1350507_sieve/src/sieve/: main.c
1350508/: README.md
1350508/src/blkdcmp-demo/: main.c
1350508/src/sieve/: main.c  sieving.h
1350508_sieve/: CMakeLists.txt  README.md
1350508_sieve/src/blkdcmp-demo/: CMakeLists.txt
1350508_sieve/src/sieve/: main.c  sieving.c
139/: CMakeLists.txt
139-floyd-seq/: CMakeLists.txt  README.md
139-floyd-seq/src/floyd-seq/: CMakeLists.txt
139-floydseq/: README.md
139-floydseq/src/floydseq/: CMakeLists.txt  main.c
139/data/: adjacency.idx
139/src/sequential/: CMakeLists.txt  main.c
139_floyd_seq/: CMakeLists.txt
139_floyd_seq/data/: adjacency6.idx
145-striped-read/: CMakeLists.txt  README.md
145-striped-read/src/striped-read/: CMakeLists.txt  main.c  rows_reader.c  rows_reader.h
145_striped_read/: CMakeLists.txt
145_striped_read/src/striped_read/: CMakeLists.txt  rows_reader.c
149_floyd_par/: CMakeLists.txt  README.md
149_floyd_par/src/floyd_par/: CMakeLists.txt  main.c  rows_reader.c  rows_reader.h  stripe.c  stripe.h
1550608_pingpong/: CMakeLists.txt  README.md
1550608_pingpong/src/pingpong/: CMakeLists.txt  main.c
1550609_reduce/: CMakeLists.txt  README.md
1550609_reduce/src/reduce/: CMakeLists.txt  main.c
1560610_bcast/: CMakeLists.txt  README.md
1560610_bcast/src/bcast/: CMakeLists.txt  main.c
1560611_sieve/: CMakeLists.txt  README.md
1560611_sieve/src/sieve/: CMakeLists.txt  main.c
1560612a_shade/: CMakeLists.txt  README.md
1560612a_shade/data/: topography.int8.idx
1560612a_shade/src/shade_par/: CMakeLists.txt  main.c
1560612a_shade/src/shade_seq/: CMakeLists.txt  main.c
1570613_life/: CMakeLists.txt  README.md
1570613_life/src/life_par/: CMakeLists.txt  main.c
1570613_life/src/life_seq/: CMakeLists.txt  main.c
185_allgatherv/: CMakeLists.txt  README.md
185_allgatherv/src/allgatherv_demo/: CMakeLists.txt  main.c
188_matrix_vector_multiplication_1/: CMakeLists.txt  README.md
189_matrix_vector_multiplication_2/: CMakeLists.txt  README.md
191_scatterv/: CMakeLists.txt  README.md
191_scatterv/src/scatterv/: CMakeLists.txt  dual_types.h  main.c
194_gatherv/: CMakeLists.txt  README.md
203_dims_create/: .gitignore  CMakeLists.txt  README.md
204_cart_create/: CMakeLists.txt  README.md
204_cart_create/src/cart_create/: CMakeLists.txt  dual_types.h  main.c
205_checkered_read/: CMakeLists.txt  README.md
205_checkered_read/src/read/: CMakeLists.txt  main.c  types.h
example-programs/: README.md
(+18 files in other folders)
